--- a/changelog
+++ b/changelog
@@ -1,7 +1,6 @@
 # CHANGELOG
 
-
-## [0.0.1] July 21,2021
+## [0.0.1] July 14,2021
 
 ### Added
 
@@ -9,15 +8,8 @@
 
 ### Changed
 
-Readme added.
+None.
 
-
-
-
-
-
-  
-  
 ### Deleted
 
 None.
