--- a/changelog
+++ b/changelog
@@ -11,7 +11,7 @@
 Added open line when game starts:
 ==============================================================================
 
-You are faced with four areas in chaos under stricken by a horrible pandemic VOPID-141. 
+You are faced with four areas in chaos stricken by a horrible pandemic VOPID-141. 
 
 Citizen's lives and the urban resources are at stake!  The whole city is on the verge of destruction.
 
