--- a/changelog
+++ b/changelog
@@ -13,7 +13,7 @@ Added open line when game starts:
 
 You are faced with four areas in chaos stricken by a horrible pandemic VOPID-141. 
 
-Citizen's lives and the urban resources are at stake!  The whole city is on the verge of destruction.
+Citizen's lives and urban resources are at stake!  The whole city is on the verge of destruction.
 
 Appointed as the governor, it's your job to save as many lives as possible.
 
