--- a/changelog
+++ b/changelog
@@ -15,7 +15,7 @@ You are faced with four areas in chaos stricken by a horrible pandemic VOPID-141
 
 Citizen's lives and urban resources are at stake!  The whole city is on the verge of destruction.
 
-Appointed as the governor, it's your job to save as many lives as possible.
+Appointed as the governor of the city, it's your job to save as many lives as possible.
 
 in the four districts with only limited amount of critical resources and control points.
 
