--- a/changelog
+++ b/changelog
@@ -11,33 +11,61 @@
 Added open line when game starts:
 ==============================================================================
 
-You are faced with four areas in chaos stricken by a horrible pandemic VOPID-141. 
+You are faced with four areas in chaos under stricken by a horrible pandemic VOPID-141. 
 
-Citizen's lives and urban resources are at stake!  The whole city is on the verge of destruction.
+Citizen's lives and the urban resources are at stake! The whole city is on the verge of destruction.
 
-Appointed as the governor of the city, it's your job to save as many lives as possible.
+Appointed as the governor, it's your job to save as many lives as possible.
 
 in the four districts with only limited amount of critical resources and control points.
 
- Control Points (CP) include the local index exclusive to each district which is the overall drop in health threat level of the virus, 
+Each area is designated a Control Point (CP) including the local index exclusive to each district which is the gross drop in health threat level of the virus, 
 
-and the global CPs such as “External Safety”, “Citizen Trust” and “Disposable Money”. 
+and the overall global CPs such as “External Safety”, “Citizen Trust” and “Disposable Money”. 
 
 Different types of CP can generate a distinctive impact on one another, thereby rendering each district relatively safe or not.
 
-The value Critical Resources (CR) demonstrates the maximum capacity of a district to offer material support to others
+The value of Critical Resources (CR) demonstrates the maximum capacity of a district to offer material support to others.
 
-It are the only factor you can control to maintain the balance of CP.
+It is the only factor you can control to maintain the balance of CP.
 
 Click on the yellow dots in the squares and click on another target district to transfer CR within the districts.
 
-The effect on CP also differs from the origin and destination of CR.
+The effect on CP differs from the attributes of the origin and destination of CR.
 
 Try to protect your CP as best as you can achieve highest drop in health threat! 
 
 The game ends when you make any of the CP decrease to 0!
 
 Good Luck. Now you will take over Gotham, Bombay, GassVilie and Burnley.
+================================================================================
+
+The on screen instrusctions as the game proceeds
+=================================================================================
+
+In the general picture, Gotham is located in the downtown area of the city, just like the capital of a country, highly developed and helpful.
+
+It ranks second in its initial CP and second also in the efficiency of changing other area’s CP with its exported CR!
+
+Bombay is Gotham’s “Satellite district”, geographically and interactively, thus the CR exchanging between those two district is particularly efficient!
+
+Generally, Bombay ranks third in its initial CP and third also in the efficiency of changing other area’s CP with its exported CR!
+
+GassVille is located in the most developed Southeast coastal area, boasting highest initial CP.
+
+Unfortunately, due to a long period of misgovernment and its improper import&Export policies, its efficiency of changing other area’s CP with its exported CR ranks last.
+
+Finally, Burnley is in the most deserted and least developed Northwest corner thus with the lowest initial CP.
+
+However, the good news is that thanks to the diligence of its citizens hence the premium exports, its efficiency of changing other area’s CP with its exported CR is far ahead!
+
+Remember: transferred CR both increase and DECREASE the CP in each area at a certain different ratio, which bring the potential risk of a huge drain on a district’s CP while making others surge!
+
+The occurrence conditions of this risk is left to you to discover, and whether to play it safe to take the risk, it’s all up to you!
+
+Either way, really try to balance the value of CP&CR in each district and be discreet with your moral choices and sacrifices!
+
+Try to survive as long as possible, baby let the game begin!
 
 ========================================================================================
 
