--- a/slide-template/sample.tex
+++ b/slide-template/sample.tex
@@ -3,7 +3,7 @@
 \usepackage[game]{sfocs-slides}
 
 \author{Team $13$:Qiao Liu, Yifan Jia, Zining Wang}
-\title{\includegraphics[width=130pt]{name}}
+\title{\vskip-0.4cm\includegraphics[width=130pt]{name}}
 \date{Summer 2021}
 
 \begin{document}
