更新 'Poster/poster.tex'

--- a/Poster/poster.tex
+++ b/Poster/poster.tex
@@ -65,14 +65,14 @@
 			\begin{columns}
 			\Large{	\begin{column}{0.55\columnwidth}
 					Brief Instructions On The Game: \\
-					"CP": "Control Points"\\
-					"CR": "Critical Resources"\\
+					CP: Control Points\\
+					CR: Critical Resources\\
 					\begin{multicols}{2}
 						\begin{itemize}
-							\item "Health Threat Drop": The dis-alarmed Health threat level
-							\item "Citizen Trust": The faith citizens in an area have in its governor
-							\item "External Safety": The safety guaranteed of the personnel and material inflow
-							\item "Disposable Money": The maximum financial aid offered to concerned institute
+							\item Health Threat Drop: The dis-alarmed Health threat level
+							\item Citizen Trust: The faith citizens in an area have in its governor
+							\item External Safety: The safety guaranteed of the personnel and material inflow
+							\item Disposable Money: The maximum financial aid offered to concerned institute
 						\end{itemize}
 					\end{multicols}
 				\end{column}
