--- a/Poster/sfocs-poster.sty
+++ b/Poster/sfocs-poster.sty
@@ -47,10 +47,10 @@
 	\setmonofont[Scale=.9]{CMU Typewriter Text}
 	\ifxetex
 		\RequirePackage{xeCJK}
-		\setCJKsansfont{AR PL UKai TW MBE:style=Book}
+%		\setCJKsansfont{AR PL UKai TW MBE:style=Book}
 	\else
 		\RequirePackage{luatexja-fontspec}
-		\setsansjfont{AR PL UKai TW MBE:style=Book}
+%		\setsansjfont{AR PL UKai TW MBE:style=Book}
 	\fi
 \fi
 
