--- a/Poster/poster.tex
+++ b/Poster/poster.tex
@@ -34,24 +34,30 @@
 
 	\begin{textblock}{45}(2,1)
 		\begin{blankbox}
-			\includegraphics[width=1000pt]{img/gamename.png} \\\hspace*{\fill} \\ \\\hspace*{\fill} \\\\\hspace*{\fill} \\
+			\includegraphics[width=1000pt]{img/gamename.png} \\\hspace*{\fill} \\ \\\hspace*{\fill}
 
 			\huge{You are faced with four areas in chaos stricken by a horrible pandemic. Citizen's lives and the urban resources are at stake! Appointed as the governor, it's your job to save as many lives as possible with only limited amount of critical resources and control points.}
 		\end{blankbox}
 	\end{textblock}
 
-	\begin{textblock}{39}(75,2)
+4	\begin{textblock}{30}(86,91)
 		\begin{blankbox}
-			\includegraphics[width=300pt]{img/Teamlogo.png}
+			\includegraphics[width=250pt]{img/Teamlogo.png}
 
 		\end{blankbox}
 	\end{textblock}
 
 	\begin{textblock}{20}(39,55.5)
 		\begin{blankbox}
-			{\Huge \textbf {\uppercase{Minimalism}}} \\\hspace*{\fill} \\
-			{\Huge \textbf {\uppercase{Simplicity}}} \\\hspace*{\fill} \\
-			{\Huge \textbf {\scshape{ENTERTAINMENT}}} \\\hspace*{\fill} \\
+\centering
+			\Huge MINIMALISM
+
+\vspace{1cm}
+
+			SIMPLICITY
+\vspace{1cm}
+
+ENTERTAINMENT
 		\end{blankbox}
 	\end{textblock}
 
@@ -59,12 +65,18 @@
 
 	% #1: box width 
 	% #2 #3: coordinates on percent 
-
+\begin{textblock}{45}(5,37)
+		\begin{blankbox}
+	
+			\huge{You are faced with four areas in chaos stricken by a horrible pandemic. Citizen's lives and the urban resources are at stake! Appointed as the governor, it's your job to save as many lives as possible with only limited amount of critical resources and control points.}
+		\end{blankbox}
+	\end{textblock}
 	\begin{textblock}{90}(5,35)
 		\begin{baseroundedbox}[]{black}{white}
 			\begin{columns}
 			\Large{	\begin{column}{0.55\columnwidth}
-					Brief Instructions On The Game: \\
+					Brief Instructions On The Game \\\hspace*{\fill} \\
+
 					CP: Control Points\\
 					CR: Critical Resources\\
 					\begin{multicols}{2}
@@ -85,25 +97,31 @@
 		\end{baseroundedbox}
 	\end{textblock}
 	
-	\begin{textblock}{50}(25,70)
+	\begin{textblock}{50}(25.5,70)
 		% no title provided, extra parameter is opacity in [0,1] 		
 		\begin{transparentbox}{white}{red}{.2}
-				\centering 
-				\huge\textbf{{Main Appeal:}} \\\hspace*{\fill} \\
-				1.Highly Customized User Control. \\\hspace*{\fill} \\
-				2.Simple yet ingenious Operation.\\\hspace*{\fill} \\
-				3.Minimalist User Interface.\\\hspace*{\fill} \\
-				4.Diverse Gaming Modes.\\\hspace*{\fill} \\             	 
+				\centering \vspace{.25cm}
+				\huge\textbf{Main Appeal}\vspace{1cm}
+
+\begin{itemize}\itemsep .85cm
+			\item Highly Customized User Control
+
+				\item Simple yet ingenious Operation
+
+				\item Minimalist User Interface
+
+				\item  Diverse Gaming Modes
+\end{itemize}       	 
 		\end{transparentbox}
 	\end{textblock} 
 
 	% option [0,1] means box anchor is bottom left	
-	\begin{textblock}{73}[0,1](40,100)
+	\begin{textblock}{80}[0,1](1,100)
 		\logos[light]
 	\end{textblock}
 
 	% option [1,1] means box anchor is bottom right	
-	\begin{textblock}{30}[1,1](94,33)
+	\begin{textblock}{30}[1,1](94,27)
 		\begin{blankbox}
 			\huge\textbf{{THREE TO ONE:}} \\\hspace*{\fill} \\
 			\Large{Zining Wang (C)}\\ 
