更新 'Slide/sample.tex'

--- a/Slide/sample.tex
+++ b/Slide/sample.tex
@@ -11,7 +11,7 @@
 
 \section{Background Story}
 
-\begin{frame}{Breaking News}
+\begin{frame}{Background Story}
 	
 	\begin{columns}
 			\column{\halfwidth}
@@ -28,7 +28,7 @@
 
 \end{frame}
 
-\begin{frame}{Breaking News}
+\begin{frame}{Background Story}
 
 	\begin{tikzpicture}[overlay, remember picture]
 
@@ -76,7 +76,7 @@
 
 \section{Game Controlling}
 
-\begin{frame}{Include a video}
+\begin{frame}{Game Controlling}
 	\begin{tikzpicture}[overlay, remember picture]
 
 		\node[anchor=south west,outer sep=0pt,inner sep=0pt] (c1) at (current page.south west)  {\includegraphics[height=\heightiii]{coronavirus-5107715(1).png}};
@@ -92,15 +92,15 @@
 	\begin{itemize}\bigsep
 		\item Click on the colorful dots in a district
 		\item Then click on another target district
-		\item Ensure your PDF reader can play videos
-		\item In zoom ensure you also share the sound
+		\item You have make a tranferrence of Critical Resources
+		\item Check how the control points have changed
 	\end{itemize}
 	\end{columns}
 \end{frame}
 
 \section{Reference}
 
-\begin{frame}{Include a video}
+\begin{frame}{Reference}
 
 	Graphics:
 	\begin{itemize}\bigsep
