更新 'Slide/sample.tex'

--- a/Slide/sample.tex
+++ b/Slide/sample.tex
@@ -79,9 +79,9 @@
 \begin{frame}{Game Controlling}
 	\begin{tikzpicture}[overlay, remember picture]
 
-		\node[anchor=south west,outer sep=0pt,inner sep=0pt] (c1) at (current page.south west)  {\includegraphics[height=\heightiii]{coronavirus-5107715(1).png}};
-		\node[anchor=south west,outer sep=0pt,inner sep=0pt] at (c1.north west) (c2) {\includegraphics[height=\heightiii]{Teamlogo.png}};
-		\node[anchor=south west,outer sep=0pt,inner sep=0pt] at (c2.north west) {\includegraphics[height=\heightiii]{WechatIMG10657.png}};
+
+	
+		\node[anchor=west,outer sep=0pt,inner sep=0pt] at (c2.west) {\includegraphics[height=\heightiii]{WechatIMG10657.png}};
 
 	\end{tikzpicture}
 \begin{columns}
@@ -92,7 +92,7 @@
 	\begin{itemize}\bigsep
 		\item Click on the colorful dots in a district
 		\item Then click on another target district
-		\item You have make a tranferrence of Critical Resources
+		\item A transference of Critical Resources is made
 		\item Check how the control points have changed
 	\end{itemize}
 	\end{columns}
@@ -122,6 +122,7 @@
 		\item Simple yet Ingenious Operation
 		\item Minimalist User Interface
 		\item The Humanism Concept
+		\item Accessible on mobile phones
 		\item Game Mod Diversity
 	\end{itemize}
 
